--- a/src/global.scss
+++ b/src/global.scss
@@ -24,3 +24,30 @@
 @import "@ionic/angular/css/text-alignment.css";
 @import "@ionic/angular/css/text-transformation.css";
 @import "@ionic/angular/css/flex-utils.css";
+
+.green {
+  --background: #ffdb22;
+  --color: #22ff22;
+  --border-style: solid;
+  --border-width: 5px;
+  --font-color: var(--color);
+}
+
+.red {
+  --background: #ffdb22;
+  --color: #ff2922 !important;
+  --border-style: solid;
+  --border-width: 1px;
+  --border-color: red;
+  --font-color: red !important;
+  --text-align: center !important;
+}
+
+.accent {
+  color: #ff22cf;
+}
+
+.header {
+  font-size: 21px;
+  font-weight: bold;
+}
